# actix-web-handbook

./: .env  Cargo.toml  api.http
assets/css/: styles.css
examples/: env_config.rs  error_handling.rs  middleware.rs  paths.rs  response.rs  router_gurads.rs  serving_files.rs  timing.rs  validator_input.rs
src/: main.rs
tests/: service_status.rs
