[package]
name = "actix-web-handbook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
