[package]
name = "actix-web-handbook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
actix-web-validator = "7.0.0"
derive_more = { version = "2.0.1", features = ["display"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
validator = { version = "0.20.0", features = ["derive"] }
